--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^6.3.11",
     "qrcode.react": "^3.0.2",
     "react": "^18.1.0",
     "react-device-detect": "^2.2.2",
