--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^6.3.11",
     "qrcode.react": "^3.0.2",
     "react": "^18.1.0",
+    "react-chartjs-2":"^4.3.1",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.1.0",
     "react-filepond": "^7.1.2",
